# fabricaNews_backEnd

./: .env-copy  .env-template  .gitignore  .isort.cfg  .pdm-python  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.devcontainer/: devcontainer.json  docker-compose.yml
.docker/: entrypoint.sh
.docker/zsh/history/: .zsh_history
.docker/zsh/powerlevel10k/: .p10k.zsh
config/: routers.py  settings.py  urls.py
core/: admin.py
core/migrations/: 0001_initial.py  0002_feeling.py  0002_user.py  0003_merge_0002_feeling_0002_user.py  0004_alter_category_description_news.py  0005_comments_newsfeel_delete_news.py  0006_news.py  0007_userinteractions.py  0008_favorites.py  0009_project_remove_userinteractions_category_and_more.py  0010_rename_news_id_favorites_news_and_more.py  0011_category_user_follow_alter_category_description.py  0011_reaction.py  0012_merge_20230505_1623.py  0013_savetoread_remove_reaction_news_remove_reaction_user_and_more.py  0014_remove_userinteractions_project_and_more.py  0015_alter_comments_user_alter_favorites_user_and_more.py  0016_remove_project_user.py  0017_alter_news_project_delete_project.py  0018_help.py  0019_news_imagenew.py
core/models/: __init__.py  category.py  comments.py  favorites.py  feeling.py  help.py  news.py  newsFeel.py  news_feel.py  project.py  reaction.py  saveToRead.py  save_to_read.py  user.py  userInteractions.py  userProjectFollow.py  user_interactions.py  user_project_follow.py
core/serializers/: __init__.py  categories.py  comments.py  favorite.py  feeling.py  help.py  news.py  newsFeel.py  reaction.py  saveToRead.py  save_to_read.py  userProjectFollow.py  user_project_follow.py
core/views/: __init__.py  categories.py  comments.py  favorite.py  feeling.py  help.py  news.py  newsFeel.py  newsfeel.py  reaction.py  saveToRead.py  save_to_read.py  userProjectFollow.py  user_project_follow.py
docs/: business-rules.md  endpoints.md  functional-requirements.md  non-functional-requirement.md
project/migrations/: 0001_initial.py
project/models/: project.py
tests/: test_news.py
uploader/migrations/: 0001_initial.py
user/: models.py
user/migrations/: 0001_initial.py  0002_alter_userinteractions_project_and_more.py
user/models/: __init__.py  user.py  userInteractions.py  userProjectFollow.py
user/serializers/: __init__.py  userProjectFollow.py
user/views/: __init__.py  userProjectFollow.py
utils/: files.py
