[project]
name = "fabricaNews_backEnd"
version = "0.1.0"
description = ""
authors = [
    {name = "Fabrica de Software", email = "fabrica@fabricadesoftware.ifc.edu.br"},
]
dependencies = [
    "django>=4.2.2",
    "djangorestframework>=3.14.0",
    "django-environ>=0.10.0",
]
requires-python = ">=3.10"
readme = "README.md"
license = {text = "MIT"}

[tool.pdm]
[tool.pdm.dev-dependencies]
dev = [
    "pylint>=2.13.9",
    "black>=22.3.0",
]
[tool.pdm.scripts]
manage = "python ./manage.py"
server = "python ./manage.py runserver"
makemigrations = "python ./manage.py makemigrations"
migrate = "python ./manage.py migrate"

[build-system]
requires = ["pdm-pep517>=1.0"]
build-backend = "pdm.pep517.api"
